--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^6.0.1
   firebase_auth: ^6.0.2
   uuid: ^4.5.1
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
