--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^6.0.2
   uuid: ^4.5.1
   flutter_riverpod: ^2.6.1
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
