--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   uuid: ^4.5.1
   flutter_riverpod: ^2.6.1
   fl_chart: ^0.69.0
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
