--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,7 @@ app.*.map.json
 lib/firebase_options.dart
 android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
+
+# Admin configuration (contains sensitive email addresses)
+lib/config/admin_config.dart
+ADMIN_CONFIG_README.md
