--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_riverpod: ^2.6.1
   fl_chart: ^0.69.0
   shared_preferences: ^2.3.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
